--- a/src/View/footer.html.twig
+++ b/src/View/footer.html.twig
@@ -3,7 +3,7 @@
         <div class="d-flex align-items-center">
             <div class="d-flex flex-column" style="width: 50%">
                 <div class="">
-                    <ul class="list-unstyled d-flex flex-row flex-wrap">
+                    <ul class="list-unstyled d-flex flex-row flex-wrap justify-content-center">
                         <li class="nav-item p-2">
                             <a class="nav-link" href="/about">Qui sommes-nous</a>
                         </li>
@@ -18,12 +18,12 @@
                 <div class="">
                     <ul class="list-unstyled d-flex flex-row flex-wrap justify-content-center">
                         <li class="nav-item p-2">
-                            <a href="https://facebook.com" class="text-white me-3" target="_blank">
+                            <a href="https://facebook.com" class="text-white" target="_blank">
                                 <i class="bi bi-facebook"></i>
                             </a>
                         </li>
                         <li class="nav-item p-2">
-                            <a href="https://twitter.com" class="text-white me-3" target="_blank">
+                            <a href="https://twitter.com" class="text-white" target="_blank">
                                 <i class="bi bi-twitter"></i>
                             </a>
                         </li>
