--- a/src/View/Admin/Categorie/index.html.twig
+++ b/src/View/Admin/Categorie/index.html.twig
@@ -42,11 +42,11 @@
                             <div class="tile-header">
                                 <h3>
                                     <span>Produits Lié</span>
-                                    <span>XX Produit lié</span>
+                                    <span></span>
                                 </h3>
                             </div>
-                            <a href="#">
-                                <span>Aller a la section Produit</span>
+                            <a href="/admin/product">
+                                <span>Aller à la section Produit</span>
                                 <span class="icon-button">
                                     <i class="bi bi-plus-circle-dotted"></i>
                                 </span>
