--- a/src/View/Admin/Product/index.html.twig
+++ b/src/View/Admin/Product/index.html.twig
@@ -46,7 +46,7 @@
                                 </h3>
                             </div>
                             <a href="/admin/categorie">
-                                <span>Aller a la section Categorie</span>
+                                <span>Aller à la section Categorie</span>
                                 <span class="icon-button">
                                     <i class="bi bi-plus-circle-dotted"></i>
                                 </span>
@@ -55,7 +55,7 @@
 
                     </div>
                     <div class="service-section-footer">
-                        <p><i class="bi bi-exclamation-square"></i> Attention a gerer vos Categories  </p>
+                        <p><i class="bi bi-exclamation-square"></i> Attention à gerer vos Categories  </p>
                     </div>
                 </section>
                 <section class="transfer-section">
