--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -4,53 +4,106 @@
         <div class="row">
             <div class="col-12">
                 <nav class="navbar navbar-expand-md navbar-dark">
-                
-                    <a class="navbar-brand" href="#" target="_blank"><img src="/assets/images/logo.png" alt=""></a>	
-                    
-                    <button class="navbar-toggler p-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <a class="navbar-brand" href="#" target="_blank"
+                        ><img src="/assets/images/logo.png" alt=""
+                    /></a>
+
+                    <button
+                        class="navbar-toggler p-2"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#navbarSupportedContent"
+                        aria-controls="navbarSupportedContent"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                    >
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto py-4 py-md-0 navbar-dark">
 
-                            <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4 active">
-                                <a class="nav-link" href="http://localhost:8000/">Accueil</a>
+                    <div
+                        class="collapse navbar-collapse justify-content-end"
+                        id="navbarSupportedContent"
+                    >
+                        <ul class="navbar-nav ms-auto py-4 py-md-0 navbar-dark">
+                            <li
+                                class="nav-item ps-4 ps-md-0 ms-0 ms-md-4 active"
+                            >
+                                <a
+                                    class="nav-link"
+                                    href="http://localhost:8000/"
+                                    >Accueil</a
+                                >
+                            </li>
+
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="/categories" role="button" aria-haspopup="true" aria-expanded="false">Categories</a>
+                                <a
+                                    class="nav-link dropdown-toggle"
+                                    data-toggle="dropdown"
+                                    href="/categories"
+                                    role="button"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                    >Categories</a
+                                >
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="/product">Tous les produits</a>
-                                {% for category in categoriesMenu %}
-                                     <a class="dropdown-item" href="/category?id={{ category.id }}"> {{ category.name }}</a>
-                                     {% for subCategory in category.subcategories %}
-                                        <a  href="/category?id={{ subCategory.id }}"> {{ subCategory.name }}</a>
-                                     {% endfor %}
-                                {% endfor %}
-                                
+                                    <a class="dropdown-item" href="/product"
+                                        >Tous les produits</a
+                                    >
+                                    {% for category in categoriesMenu %}
+                                    <a
+                                        class="dropdown-item"
+                                        href="/category?id={{ category.id }}"
+                                    >
+                                        {{ category.name }}</a
+                                    >
+                                    {% for subCategory in category.subcategories
+                                    %}
+                                    <a href="/category?id={{ subCategory.id }}">
+                                        {{ subCategory.name }}</a
+                                    >
+                                    {% endfor %} {% endfor %}
                                 </div>
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link" href="/cart"><i class="bi bi-basket2"></i> Panier</a>
+                                <a class="nav-link" href="/cart"
+                                    ><i class="bi bi-basket2"></i> Panier</a
+                                >
                             </li>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
-                                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="compte" role="button" aria-haspopup="true" aria-expanded="false">
+                                <a
+                                    class="nav-link dropdown-toggle"
+                                    data-toggle="dropdown"
+                                    href="compte"
+                                    role="button"
+                                    aria-haspopup="true"
+                                    aria-expanded="false"
+                                >
                                     <i class="bi bi-person-fill"></i> Compte
                                 </a>
                                 <div class="dropdown-menu">
                                     {% if not isLoggedIn %}
-                                    <a class="dropdown-item" href="/login">Connexion</a>
-                                    <a class="dropdown-item" href="/admin">Administration</a>
+                                    <a class="dropdown-item" href="/login"
+                                        >Connexion</a
+                                    >
+                                    <a class="dropdown-item" href="/admin"
+                                        >Administration</a
+                                    >
                                     {% else %}
-                                    <a class="dropdown-item" href="/account">Mon compte</a>
-                                    <a class="dropdown-item" href="/admin">Administration</a>
-                                    <a class="dropdown-item" href="/logout">Se Déconnecter</a>
+                                    <a class="dropdown-item" href="/account"
+                                        >Mon compte</a
+                                    >
+                                    <a class="dropdown-item" href="/admin"
+                                        >Administration</a
+                                    >
+                                    <a class="dropdown-item" href="/logout"
+                                        >Se Déconnecter</a
+                                    >
                                     {% endif %}
                                 </div>
                             </li>
                         </ul>
                     </div>
-                    
-                </nav>		
+                </nav>
             </div>
         </div>
     </div>
