[design] page category page product

--- a/src/View/header.html.twig
+++ b/src/View/header.html.twig
@@ -5,7 +5,7 @@
             <div class="col-12">
                 <nav class="navbar navbar-expand-md navbar-dark">
                 
-                    <a class="navbar-brand" href="#" target="_blank"><img src="/assets/images/logo.png" alt=""></a>	
+                    <a class="navbar-brand" href="/" target="_blank"><img src="/assets/images/logo.png" alt=""></a>	
                     
                     <button class="navbar-toggler p-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -15,7 +15,7 @@
                         <ul class="navbar-nav ms-auto py-4 py-md-0 navbar-dark">
 
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4 active">
-                                <a class="nav-link" href="http://localhost:8000/">Accueil</a>
+                                <a class="nav-link" href="/">Accueil</a>
                             <li class="nav-item ps-4 ps-md-0 ms-0 ms-md-4">
                                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="/categories" role="button" aria-haspopup="true" aria-expanded="false">Categories</a>
                                 <div class="dropdown-menu">
@@ -23,7 +23,7 @@
                                 {% for category in categoriesMenu %}
                                      <a class="dropdown-item" href="/category?id={{ category.id }}"> {{ category.name }}</a>
                                      {% for subCategory in category.subcategories %}
-                                        <a  href="/category?id={{ subCategory.id }}"> {{ subCategory.name }}</a>
+                                        <a class="dropdown-item bg-beige" href="/category?id={{ subCategory.id }}">- {{ subCategory.name }}</a>
                                      {% endfor %}
                                 {% endfor %}
                                 
