[error] name product resolved

--- a/src/View/Category/index.html.twig
+++ b/src/View/Category/index.html.twig
@@ -176,7 +176,7 @@
 												{% endif %}
 												</a>
 												<div>
-													<h4>{{product.name}}</h4>
+													<h4>{{product.productName}}</h4>
 													<h6 class="mt-0 text-black-50">{{product.categoryName}}</h6>
 												</div>
 											</div>
