petite erreur de css

--- a/src/View/Legal/index.html.twig
+++ b/src/View/Legal/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'layout.html.twig' %} {% block stylesheet %}
-<link rel="stylesheet" href="/assets/css/infos/privacy.css" />
+<link rel="stylesheet" href="/assets/css/infos/legal.css" />
 {% endblock %} {% block content %}
 <div class="super-div">
     <h2 class="title">Mentions Légales</h2>
