ajout sous-catégories

--- a/src/View/Admin/User/index.html.twig
+++ b/src/View/Admin/User/index.html.twig
@@ -63,7 +63,7 @@
                 </section>
                 <section class="transfer-section">
                     <div class="transfer-section-header">
-                        <h2>Liste des Produits</h2>
+                        <h2>Liste des Utilisateurs</h2>
                         <div class="filter-options">
                             <p>Attention a toutes Modification des Droits.</p>
                             <button class="icon-button">
