--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -591,7 +591,7 @@ body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
         height: 1px;
         content: "";
         border: none;
-        background-color: #000;
+        background-color: var(--tertiary-color);
         vertical-align: 0;
     }
 
@@ -604,7 +604,7 @@ body.dark .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
         height: 11px;
         content: "";
         border: none;
-        background-color: #000;
+        background-color: var(--tertiary-color);
         vertical-align: 0;
         transition: all 200ms linear;
     }
