[design] footer link

--- a/src/View/footer.html.twig
+++ b/src/View/footer.html.twig
@@ -4,30 +4,30 @@
             <div class="d-flex flex-column" style="width: 50%">
                 <div class="">
                     <ul class="list-unstyled d-flex flex-row flex-wrap justify-content-center">
-                        <li class="nav-item p-2">
-                            <a class="nav-link" href="/about">Qui sommes-nous</a>
+                        <li class="list-group-item p-2">
+                            <a class="" href="/about">Qui sommes-nous</a>
                         </li>
-                        <li class="nav-item p-2">
-                            <a class="nav-link" href="/legal">Mentions Légales</a>
+                        <li class="list-group-item p-2">
+                            <a class="" href="/legal">Mentions Légales</a>
                         </li>
-                        <li class="nav-item p-2">
-                            <a class="nav-link" href="/privacy">Politique de confidentialité</a>
+                        <li class="list-group-item p-2">
+                            <a class="" href="/privacy">Politique de confidentialité</a>
                         </li>
 
                 </div>
                 <div class="">
                     <ul class="list-unstyled d-flex flex-row flex-wrap justify-content-center">
-                        <li class="nav-item p-2">
+                        <li class="list-group-item p-2">
                             <a href="https://facebook.com" class="text-white" target="_blank">
                                 <i class="bi bi-facebook"></i>
                             </a>
                         </li>
-                        <li class="nav-item p-2">
+                        <li class="list-group-item p-2">
                             <a href="https://twitter.com" class="text-white" target="_blank">
                                 <i class="bi bi-twitter"></i>
                             </a>
                         </li>
-                        <li class="nav-item p-2">
+                        <li class="list-group-item p-2">
                             <a href="https://instagram.com" class="text-white" target="_blank">
                                 <i class="bi bi-instagram"></i>
                         </li>
