--- a/src/View/Admin/Categorie/index.html.twig
+++ b/src/View/Admin/Categorie/index.html.twig
@@ -41,7 +41,7 @@
                         <article class="tile">
                             <div class="tile-header">
                                 <h3>
-                                    <span>Produits Lié</span>
+                                    <span>Produits Liés</span>
                                     <span></span>
                                 </h3>
                             </div>
@@ -55,14 +55,14 @@
 
                     </div>
                     <div class="service-section-footer">
-                        <p><i class="bi bi-exclamation-square"></i> Attention a gerer vos produits </p>
+                        <p><i class="bi bi-exclamation-square"></i> Attention à gerer vos Produits </p>
                     </div>
                 </section>
                 <section class="transfer-section">
                     <div class="transfer-section-header">
-                        <h2>Liste des Categories</h2>
+                        <h2>Liste des Catégories</h2>
                         <div class="filter-options">
-                            <p>Attention a toutes Modification.</p>
+                            <p>Attention à toutes modification.</p>
                             <button class="icon-button">
                                 <i class="bi bi-eye"></i>
                             </button>
