--- a/src/View/Admin/Product/index.html.twig
+++ b/src/View/Admin/Product/index.html.twig
@@ -41,7 +41,7 @@
                         <article class="tile">
                             <div class="tile-header">
                                 <h3>
-                                    <span>Categories Lié</span>
+                                    <span>Categories Liées</span>
                                     <span></span>
                                 </h3>
                             </div>
@@ -62,7 +62,7 @@
                     <div class="transfer-section-header">
                         <h2>Liste des Produits</h2>
                         <div class="filter-options">
-                            <p>Attention a toutes Modification.</p>
+                            <p>Attention à toutes modification.</p>
                             <button class="icon-button">
                                 <i class="bi bi-eye"></i>
                             </button>
